# ASTex

./: .gitignore  .travis.yml  .travis_install.sh  CMakeLists.txt  README.md  appveyor.yml
ASTex/: ASTexConfig.cmake.in  CMakeLists.txt  autoregressive.h  bilateral_filters.cpp  bilateral_filters.h  colorMatching.h  color_map.h  colorspace_filters.h  conversion.h  distances_maps.cpp  distances_maps.h  dll.h  easy_io.cpp  easy_io.h  exr_io.cpp  exr_io.h  file_paths.cpp  fourier.cpp  fourier.h  fourier.hpp  histogram.h  image_collector.cpp  image_collector.h  image_common.h  image_gray.h  image_indexed.h  image_merging.h  image_rgb.h  image_rgba.h  image_spectral.h  imageviewer.h  internal.h  local_spectrum.cpp  local_spectrum.h  mask.cpp  mask.h  mipmap.h  noise.h  pca.cpp  pca.h  (+15 more)
ASTex/CCVT/: metric.h  numerical_Tcontent.h  numerical_Tstat.h  numerical_Tvois.h  optimizer.h  point.h  reynold.h  sites.h  tools.h
ASTex/CCVT_tests/: data.h  large_numerical_test.h  mesure_full.h  mesure_presence.h  mesure_statistiques.h  mesure_triplet.h  mesure_voisinage.h  numerical_Tcontent.h  numerical_Treynold.h  numerical_Tstat.h  numerical_Tvois.h  tools.h
ASTex/CSN/: csn_texture.h  tpsd.h
ASTex/ContentExchange/: alternativeAtlas.h  atlas.h  benchmarker.cpp  benchmarker.h  choosers.h  content.h  multiTextureProcessor.h  old_FragmentProcessor.cpp  old_FragmentProcessor.h  old_PatchProcessor.cpp  old_PatchProcessor.h  old_PoissonDiskSampler.cpp  old_PoissonDiskSampler.h  patch.h  patchProcessor.h
ASTex/Noises/: Gabor.h  Perlin.h  fBm.h
ASTex/PCTS/: pcts.h
ASTex/RegionFinder/: comparePixels.h  exploreTextures.h  regionFinder.h
ASTex/Sparse/: benchmarker.h  dictionary.cpp  dictionary.h  dictionaryProcessor.h  residual.cpp  residual.h
ASTex/Stamping/: sampler.cpp  sampler.h  stamp.h  stamper.h
ASTex/TilingBlending/: controlled_tnb.h  simple_tnb.h
ASTex/region_growing/: connected_components.h  neighborhood.h  region_growing.h
ASTex/saliency/: contrast_based_saliency.h  permutohedral_lattice.h
Algo/BLTS/: CMakeLists.txt  hv_astex_io.h  noise_binary.cpp.autosave  noise_image_collection.cpp  noise_kmean.cpp  noise_kmean.h  noise_synthesis_correlated_color.cpp  noise_welch.cpp  tests.h
Algo/BLTS/hv/: Fragmenter.h  hvArray1.h  hvBinTree.h  hvBoolArray2.h  hvField2.h  hvLine3.h  hvPict.h  hvPictRGB.h  hvPicture.h  hvProcWPhase.h  hvQPicture.h  hvTransform.h
Algo/CCVT_CGAL/: CMakeLists.txt  ccvt.h  ccvt_application.cpp  ccvt_application.h  ccvt_assign.cpp  ccvt_energy.cpp  ccvt_histogram.cpp  ccvt_init.cpp  ccvt_io.cpp  ccvt_optimizer.cpp  ccvt_sites.cpp  console_color.h  convex_polygon.h  domain.h  enriched_segment.h  grid.h  imgui.ini  line_search.h  main_ccvt_cgal.cpp  pgm.h  pixel.h  primitive.h  pw_line_search.h  random.h  rt2.h  timer.h  types.h  util.h
Algo/CCVT_CGAL/imgui/: imgui.cpp  imgui_demo.cpp  implot.cpp  (+6 more)
Algo/CyclostationaryNoise/: CMakeLists.txt  cyclostationary_noise.cpp
Algo/Graphcut/: CMakeLists.txt  graphcut.cpp  graphcut.h  test_graphcut.cpp  test_graphcut_2.cpp
Algo/MicroPatterns/: CMakeLists.txt  blurred_colorMap.h  micropatterns.h  mipmaped_noise.h  mp_inputs.h  test_mp.cpp  tiling.cpp  tiling.h  vec_ops.h
Algo/PatchExchange/: CMakeLists.txt  FragmentProcessor.cpp  FragmentProcessor.h  PatchProcessor.cpp  PatchProcessor.h  PoissonDiskSampler.cpp  PoissonDiskSampler.h  test_patch_exchange.cpp
Algo/PatchMatch/: CMakeLists.txt  pm_minimal.cpp
Algo/PerioSmooth/: CMakeLists.txt  perio_smooth.cpp  perio_smooth_color.cpp
Algo/ProceduralNoiseFiltering/: CMakeLists.txt  color_map.h  gaussian_transfer.cpp  gaussian_transfer.h  generator.cpp  histogram.h  imageviewer.h  noise.h  pnf.cpp  pnf.h  pnf_qt.cpp  pnf_texture.cpp  texture_noise.h  utils.h  win_opt.h
Algo/Quilting/: CMakeLists.txt  error_buffer.cpp  error_buffer.h  quilting.cpp  quilting.h  quilting_all.cpp  quilting_all.h  quilting_interp.cpp  quilting_interp.h  quilting_interp_cont.cpp  quilting_interp_cont.h  test_quilt_all.cpp  test_quilt_interp.cpp  test_quilt_interp_cont.cpp  test_quilting.cpp
Algo/TerrainEnhancement/: CMakeLists.txt  control_maps.h  controlled_tnb.h  input_terrain.h  terrain_enhancement.h  test_terrain_enhancement.cpp  transfer_functions.h
Algo/TextonNoiseAnalysis/: CMakeLists.txt  analyse_texton.cpp  analyse_texton.h  test_analyse_texton.cpp
Algo/WangTiles/: CMakeLists.txt  _CMakeLists.txt  imageviewer.h  min_path_cut.h  wang.cpp  wang_qt.cpp  wang_tiles.h
Bench/: CMakeLists.txt  bench_eigen_pixels.cpp  bench_parallel_for.cpp  bench_traversals.cpp
Develop/: CMakeLists.txt  gaussian_process.h  histogram.h  imageviewer.h  main.cpp  mipmap.h
Develop/ContentExchange/: atlas.h  content.h  patch.h  patchProcessor.h
Develop/Stamping/: sampler.cpp
Install_windows/: CMakeLists.txt  README.TXT  installer.vbs
Test/: CMakeLists.txt  chgrenier_Eregions.cpp  chgrenier_Hccvt.cpp  chgrenier_Href.cpp  chgrenier_Tcontent.cpp  chgrenier_analyseT.cpp  chgrenier_ccvt.cpp  chgrenier_cm2d.cpp  chgrenier_eqPointProcess.cpp  chgrenier_fourier.cpp  chgrenier_reynold.cpp  chgrenier_tests.cpp  main.cpp  nlutz_tests.cpp  test_PCTSResynthesis.cpp  test_RPN.cpp  test_autoregressive.cpp  test_contentExchange.cpp  test_contentExchangeAmplification.cpp  test_csn.cpp  test_cyclostationaryPSD.cpp  test_exr_io.cpp  test_gradient.cpp  test_heightToTexture.cpp  test_ipsd.cpp  test_matchHistogram.cpp  test_mixmax.cpp  test_multiTextureContentExchange.cpp  test_pcts.cpp  test_psdpc.cpp  test_randomChecker.cpp  test_saliency.cpp  test_simple_tiling_n_blending.cpp  test_sparse.cpp  test_spectrum.cpp  test_super_pixel.cpp  test_terrainAmplification.cpp  test_texton.cpp
Tuto/: CMakeLists.txt  tuto_color_filters.cpp  tuto_filter1.cpp  tuto_filter2.cpp  tuto_filter3.cpp  tuto_filter4.cpp  tuto_filter5.cpp  tuto_filter6.cpp  tuto_filter7.cpp  tuto_gray.cpp  tuto_mask.cpp  tuto_mp.cpp  tuto_noise_filter.cpp  tuto_pixel_types.cpp  tuto_png_indexed.cpp  tuto_rgb.cpp  tuto_store.cpp  tuto_tnb.cpp  tuto_traverse_for_all.cpp  tuto_traverse_iterators.cpp
deploy_dll/: CMakeLists.txt  deploy_astex_dll.cpp
(+124 files in other folders)
